<resources>
    <!-- Strings related to apps -->
    <string name="org_name">AeroGear</string>
    <string name="org_url">www.aerogear.org</string>
    <string name="app_name">AeroGear Android Showcase</string>
    <string name="app_description">This app demonstrates how to use the AeroGear Mobile services, backed by OpenShift to perform a wide range of common mobile tasks such as Identity Management, Device Security, Metrics Capture, Push Notifications and more. \n\nFor further information, visit <a href="http://www.aerogear.org">www.aerogear.org</a></string>

    <!-- Strings related to the information popups -->
    <string name="popup_title">Information</string>
    <string name="popup_home_fragment">Welcome. Clicking this button on each view inside the App will give you more information about the different security measures implemented.</string>
    <string name="popup_authentication_fragment">The Authentication and Access Control is provided by the OpenID Connect standard. The Open Source Identity and Access Management Server, Keycloak, is being used as the Identity Provider.  \n\nThis App uses the Authorization Code flow and saves the tokens to Shared Preferences in WORLD_PRIVATE mode.  \n\nCertificate pinning is being used for the Authentication Server. A Base64 encoded Subject Public Key Information (SPKI) fingerprint is being pinned in the mobile app which is verified against the presented certificate.</string>
    <string name="popup_storage_fragment">The notes are encrypted automatically when saved locally. It supports 2 storage options, using file system or sqlite. \n\nWhen saved in the file system, each note is saved in its own file, and encrypted with its own secret key. The secret keys are persisted in the Android Keystore.
        \nTo encrypt the files, AES is used. The key size is 128 bit, with GCM mode to ensure the integrity of the data.
        \n\nWhen saved in sqlite database, SqlCipher library is used to encrypt the whole database.
        \n\nFor Android versions below 23, the secret keys can not be generated using the keystore. Instead, a KeyPair is generated in the keystore, and the secret key is generated separately. Then the public key is used to encrypt the secret key and the encrypted secret key is persisted using the private SharedPrefereneces of the app.
           To load the encrypted files, the encrypted secret key will be decrypted first using the private key.
    </string>
    <string name="popup_authentication_details_fragment">The Users Identity and Access Data is being retrieved from the OpenID Connect Access Token. \n\nThe remote	endpoint terminates the	existing session when the user logs out.</string>
    <string name="popup_accesscontrol_fragment">There are a number of role checks performed here to indicate if the users Access Token grants them access to a number of predefined roles in the mobile app. \n\nTo enter this view, the user must at least possess the mobile-user role.</string>
    <string name="popup_device_fragment">The Application assesses the environment around it to learn how the Application is being run.
    \n\nThe application can detect if it is being run in an emulator by looking for evidence in the system properties.
    \n\nThe application also detects if an Android debugger is attached to the application.
    \n\nRoot Access is detected using a number of techniques including checking for root management apps, root cloaking apps, busybox binaries etc.
    \n\nThe app will also detect if a user has setup a device lock screen using a pin, password, pattern etc.
    \n\nHooking framework binaries like Cydia Substrate and the Xposed Framework will also be scanned for.
    \n\nA number of other checks are performed to see if it is possible to recover application data using the android backup function, check if device encryption is being used, check that the device is using the latest Android version and detecting if the developer mode is enabled.</string>
    <string name="popup_network_fragment"> Before being allowed to upload notes to the API server, the user\'s permission is checked on the client. The API server endpoints are also protected by the same role check.
    \n\nTo ensure the security of the data during transmission, certificate pinning is used to check the identity of the server.
    </string>

    <!-- Strings related to Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to Home -->
    <string name="fragment_title_home">Home</string>

    <!-- Strings related to Authentication -->
    <string name="fragment_title_authenticate">Authenticate</string>
    <string name="action_settings">Settings</string>
    <string name="app_redirect_scheme">com.aerogear.androidshowcase</string>
    <string name="title_activity_authenticate">Authenticate</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_auth_token">No Authentication Token</string>
    <string name="keycloak_login">Authenticate</string>
    <string name="keycloak_logout">Logout</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_success">Authentication Success</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="logout_success">Logged Out Successfully</string>
    <string name="roles">Roles</string>
    <string name="resource_roles">Resource Roles</string>
    <string name="unknown_email">Unknown Email</string>
    <string name="unknown_name">Unknown Name</string>
    <string name="cert_pin_verification_failed">Certificate Pinning Verification Failed</string>
    <string name="insecure_connection_prevent_auth">Insecure Server Connection. Preventing Authentication</string>

    <!-- Strings related to Access Control -->
    <string name="fragment_title_accesscontrol">Access Control</string>
    <string name="not_authenticated">Insufficient Privileges. Your Access Token must possess the "mobile-user" realm role.</string>
    <string name="not_authenticated_api_access">Insufficient Privileges. Your Access Token must possess the "api-access" realm role.</string>
    <string name="role_mobile_user_label">Mobile User Role</string>
    <string name="role_api_access_label">API Access Role</string>
    <string name="role_superuser_label">Superuser Role</string>
    <string name="access_granted">Access Granted</string>
    <string name="access_denied">Access Denied</string>

    <!-- Strings related to Storage -->
    <string name="fragment_title_storage">Secure Storage</string>
    <string name="fragment_note_title">Title</string>
    <string name="fragment_note_content">Content</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="info_note_saved">Note is saved</string>
    <string name="info_note_deleted">Note is deleted</string>
    <string name="error_missing_note_title">Note title is required</string>
    <string name="error_failed_save_note">Failed to save note</string>
    <string name="error_failed_read_note">Failed to read note</string>
    <string name="error_failed_delete_note">Failed to delete note</string>
    <string name="fragment_store_type">Store Type</string>
    <string name="store_type_file_system">File System</string>
    <string name="store_type_sqlite">SQLite Database</string>

    <!-- Strings related to Network -->
    <string name="fragment_title_network">Network Security</string>
    <string name="network_request_failed">Network Request Failed</string>
    <string name="upload_notes">Upload Notes</string>
    <string name="no_notes_info">You do not have any note to upload. Please create one first.</string>
    <string name="notes_info">You have %1$d notes to upload.</string>
    <string name="permission_info">You %1$s have the required %2$s role to upload notes.</string>
    <string name="upload_complete">Uploaded %1$d notes.</string>
    <string name="upload_prepare">Preparing for upload...</string>
    <string name="upload_progress">Uploaded %1$d/%2$d</string>
    <string name="cancel_upload">Cancel Upload</string>
    <string name="upload_cancelled">Upload cancelled. Completed %1$d.</string>

    <!-- Strings related to Device -->
    <string name="fragment_title_device">Device Trust</string>
    <string name="trust_score_header_title">Device Trust Score</string>
    <string name="root_detected_positive">Root Access Detected</string>
    <string name="root_detected_negative">No Root Access Detected</string>
    <string name="emulator_detected_positive">Emulator Access Detected</string>
    <string name="emulator_detected_negative">No Emulator Access Detected</string>
    <string name="debugger_detected_positive">Debugger Detected</string>
    <string name="debugger_detected_negative">No Debugger Detected</string>
    <string name="device_lock_detected_positive">Device Lock Enabled</string>
    <string name="device_lock_detected_negative">No Device Lock Enabled</string>
    <string name="hooking_detected_positive">Hooking Framework Detected</string>
    <string name="hooking_detected_negative">No Hooking Framework Detected</string>
    <string name="allow_backup_detected_positive">App Data Backup Recovery Enabled</string>
    <string name="allow_backup_detected_negative">App Data Backup Recovery Disabled</string>
    <string name="device_encrypted_positive">Device Encryption Active</string>
    <string name="device_encrypted_negative">Device Encryption Inactive</string>
    <string name="developer_options_positive">Developer Options Enabled</string>
    <string name="developer_options_negative">Developer Options Disabled</string>
    <string name="device_trust_warning">Your device is not secure, do you want to continue?</string>
    <string name="device_continue">Continue</string>
    <string name="device_exit">Exit</string>

    <!-- Strings related to Cryptography -->
    <string name="fragment_title_cryptography">Cryptography</string>

    <!-- Strings related to Memory -->
    <string name="fragment_title_memory">Memory</string>

    <!-- Strings related to Configuration -->
    <string name="fragment_title_configuration">Configuration</string>

    <!-- Strings related to Configuration -->
    <string name="home_title">Secure Android Template</string>

    <string name="help_title">Help</string>

    <!-- HTTP -->
    <string name="popup_http_fragment">A Simple Request to a JSON Endpoint using the HTTP Module.</string>
    <string name="fragment_title_http">HTTP</string>

    <!-- Push -->
    <string name="device_register_success">Device success registered on Unified Push Server</string>
    <string name="device_register_error">An error occurred while trying to register the device on Unified Push Server</string>
    <string name="nothing_here">Nothing here yet</string>
    <string name="send_notification">Send notifications from the console</string>
    <string name="popup_push_fragment">AeroGear for Android provides support for integrating Firebase Cloud Messaging (FCM) with the AeroGear Unified Push Server.  Push messaging is a mechanism for sending data to mobile clients from a remote server. For mobile applications, this reduces battery usage, removes polling code and provides for a better user experience as data changes are communicated in real time.  Messages that FCM receives from an application server are sent to the Android device over a connection managed by the operating system. These messages are then extracted and passed to an application using services definied provided by the AeroGear library.</string>
    <string name="fragment_title_push">Push</string>

</resources>
