<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/fragment_title_home" />
        <item
            android:id="@+id/nav_authentication"
            android:icon="@drawable/ic_lock_open"
            android:title="@string/fragment_title_authenticate" />

        <item
            android:id="@+id/nav_accesscontrol"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/fragment_title_accesscontrol" />

        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/ic_storage"
            android:title="@string/fragment_title_storage" />
        <item
            android:id="@+id/nav_network"
            android:icon="@drawable/ic_network_locked"
            android:title="@string/fragment_title_network" />
        <item
            android:id="@+id/nav_device"
            android:icon="@drawable/ic_phone_lock"
            android:title="@string/fragment_title_device" />
    </group>
</menu>
